PHP-DHARSHINI
<? php
$capital=67;
print(“Variable capital is $capital”);
print(“Variable CaPiTaL is $CaPiTaL”);
?>



OUTPUT
ERROR!
/tmp/Am00wiBXdc/main.c:1:1: error: expected identifier or '(' before '<' token
    1 | <? php
      | ^
/tmp/Am00wiBXdc/main.c:3:7: error: expected declaration specifiers or '...' before string constant
    3 | print("Variable capital is $capital");
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/Am00wiBXdc/main.c:4:7: error: stray '\342' in program
    4 | print(<U+201C>Variable CaPiTaL is $CaPiTaL<U+201D>);
      |       ^~~~~~~~
ERROR!
/tmp/Am00wiBXdc/main.c:4:8: error: unknown type name 'Variable'
    4 | print(“Variable CaPiTaL is $CaPiTaL”);
      |        ^~~~~~~~
/tmp/Am00wiBXdc/main.c:4:36: error: stray '\342' in program
    4 | print(<U+201C>Variable CaPiTaL is $CaPiTaL<U+201D>);
      |                                           ^~~~~~~~
/tmp/Am00wiBXdc/main.c:5:1: error: expected identifier or '(' before '?' token
    5 | ?>
      | ^


=== Code Exited With Errors ===



 Problems in the Code:
<? php has an extra space. It should be <?php.

“ and ” are smart quotes (curly quotes). PHP requires straight quotes: " or '.

$CaPiTaL is undefined — PHP is case-sensitive for variable names.




CORRECT CODE

<?php
$capital = 67;
print("Variable capital is $capital\n");
print("Variable CaPiTaL is $CaPiTaL\n");
?>


OUTPUT
Variable capital is 67





2.Create a PHP program to display the division table using for-loop.
1 2 3
1 1 0.5 0.33
2 2 1 0.66
3 3 1.5 1

<html>
<head>
    <title>Division Table</title>
    <style>
        table, th, td {
            border: 1px solid black;
            border-collapse: collapse;
            padding: 8px;
            text-align: center;
        }
    </style>
</head>
<body>

<?php
echo "<table>";
echo "<tr><td></td>"; // Top-left empty cell

// Top header row
for ($i = 1; $i <= 3; $i++) {
    echo "<td>$i</td>";
}
echo "</tr>";

// Table rows
for ($row = 1; $row <= 3; $row++) {
    echo "<tr>";
    echo "<td>$row</td>"; // First column (row header)

    for ($col = 1; $col <= 3; $col++) {
        $result = $row / $col;
        echo "<td>" . round($result, 2) . "</td>";
    }

    echo "</tr>";
}
echo "</table>";
?>

</body>
</html>


OUTPUT
 | 1   2    3
  ---------------
  1  | 1  0.5  0.33
  2  | 2   1   0.66
  3  | 3  1.5   1


3. Imagine you are building a personal portfolio website. Design a web page layout that
includes a header, a navigation menu, a main content area for displaying your projects
and a footer. Explain how you would structure the HTML code and apply CSS styles to
achieve the desired layout and visual design.


<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>My Portfolio</title>
  <link rel="stylesheet" href="styles.css" />
</head>
<body>
  <header>
    <h1>John Doe</h1>
    <p>Web Developer | Problem Solver | Tech Enthusiast</p>
  </header>

  <nav>
    <ul>
      <li><a href="#about">About</a></li>
      <li><a href="#projects">Projects</a></li>
      <li><a href="#contact">Contact</a></li>
    </ul>
  </nav>

  <main>
    <section id="projects">
      <h2>My Projects</h2>
      <div class="project">
        <h3>Project One</h3>
        <p>Description of project one.</p>
      </div>
      <div class="project">
        <h3>Project Two</h3>
        <p>Description of project two.</p>
      </div>
    </section>
  </main>

  <footer>
    <p>&copy; 2025 John Doe. All rights reserved.</p>
  </footer>
</body>
</html>


4.  Predict the output of the following snippet:
$animal = “antelope”; $animal_heads = 1; $animal_legs = 4;
echo“The $animal has $animal_heads head(s).”;
echo“The $animal has $animal_legs leg(s).”;

Corrected Version:

$animal = "antelope"; 
$animal_heads = 1; 
$animal_legs = 4;

echo "The $animal has $animal_heads head(s).";
echo "The $animal has $animal_legs leg(s).";

output:
The antelope has 1 head(s).The antelope has 4 leg(s).
















